--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,6 @@ document.location = "publications.m.html";
   <div class="wrapper">
     <header>
       <h1 class="title">Publications</h1>
-      <!-- <h1 class="subtitle">Scholar and Roboticist</h1> -->
     </header>
     
     <div id="container">
@@ -57,7 +56,10 @@ document.location = "publications.m.html";
 <h3>Journal</h3>
 
 <p>
-<b>G. C. Thomas</b>, and L. Sentis, "Identifying H[infinity]-Models: An LMI Approach," conditionally accpeted to IEEE T-AC <a href="https://arxiv.org/pdf/1802.07695">[ArXiv]</a><a href="bib/gray.bib.html#ThomasSentis201X">[.bib]</a>
+<b>G. C. Thomas</b>, and L. Sentis, "Quadric Inclusion Programs: an LMI Approach to H[infinity]-Model Identification," accepted, IEEE T-AC <a href="https://arxiv.org/pdf/1802.07695">[ArXiv]</a><a href="bib/gray.bib.html#ThomasSentis2019TAC">[.bib]</a>
+</p>
+
+K. Isik, <b>G. C. Thomas</b>, and L. Sentis, "A Fixed Structure Gain Selection Strategy for High Impedance Series Elastic Actuator Behavior," J. Dynamic Systems, Measurement, and Control., vol. 141, no. 2, Oct. 2018, doi: 10.1115/1.4041449  <a href="http://dynamicsystems.asmedigitalcollection.asme.org/article.aspx?articleid=2702914">[Link]</a><a href="bib/gray.bib.html#IsikThomasSentis2019DSMC">[.bib]</a>
 </p>
 
 <p>
@@ -71,29 +73,31 @@ T. Koolen, S. Bertrand, <b>G. C. Thomas</b>, T. de Boer, T. Wu, J. Smith, J. Eng
 <h3>Conference</h3>
 
 <p>
-R. Schlossman, <b>G. C. Thomas</b>, and L. Sentis, "Toward Exploiting the Natural Dynamics of Series Elastic Robots by Actuator-Centered Sequential Linear Program," submitted to <i>The IEEE/RSJ International Conference on Intelligent Robots and Systems</i>,  Madrid, Spain, 2018 
-<!-- <a href="http://ieeexplore.ieee.org/abstract/document/7759571/">[Link]</a>  -->
-<!-- <a href="http://ieeexplore.ieee.org/abstract/document/7963638/">[Link]</a> -->
+B. He, <b>G. C. Thomas</b>, N. A. Paine, and L. Sentis, "
+Modeling and Loop Shaping of Single-Joint Amplification Exoskeleton with Contact Sensing and Series Elastic Actuation," submitted to <i>The American Control Conference</i>, Philadelphia, PA, 2019 
+<a href="https://arxiv.org/abs/1809.10560">[ArXiv]</a> 
+<a href="bib/gray.bib.html#HeThomasPaineSentis2019ACC">[.bib]</a>
+</p>
+
+<p>
+R. Schlossman, <b>G. C. Thomas</b>, O. Campbell, and L. Sentis, "Toward Exploiting the Natural Dynamics of Series Elastic Robots by Actuator-Centered Sequential Linear Program," submitted to <i>The IEEE/RSJ International Conference on Intelligent Robots and Systems</i>,  Madrid, Spain, 2018 
 <a href="https://arxiv.org/pdf/1802.10190.pdf">[ArXiv]</a> 
-<a href="bib/gray.bib.html#SchlossmanThomasSentis2018ICRApre">[.bib]</a>
+<a href="bib/gray.bib.html#SchlossmanThomasCampbellSentis2018ROBIO">[.bib]</a>
 </p>
 
 <p>
 <b>G. C. Thomas</b>, B. He, and L. Sentis, "Safety Control Synthesis with Input Limits: a Hybrid Approach," accepted for publication in <i>The American Control Conference</i>, Milwaukee, WI, 2018 
-<!-- <a href="http://ieeexplore.ieee.org/abstract/document/7963638/">[Link]</a> -->
 <a href="https://arxiv.org/pdf/1802.10188.pdf">[ArXiv]</a> 
-<a href="bib/gray.bib.html#ThomasHeSentis2018preACC">[.bib]</a>
+<a href="bib/gray.bib.html#ThomasHeSentis2018ACC">[.bib]</a>
 </p>
 
 <p>
 <b>G. C. Thomas</b>, and L. Sentis, "MIMO Identification of Frequency-Domain Unreliability in SEAs," presented at <i>The American Control Conference</i>, Seattle, WA, 2017
-<!-- <a href="http://ieeexplore.ieee.org/abstract/document/7759571/">[Link]</a>  -->
 <a href="http://ieeexplore.ieee.org/abstract/document/7963638/">[Link]</a><a href="Preprints/ThomasSentis2017ACC.pdf">[pdf]</a><a href="bib/gray.bib.html#ThomasSentis2017ACC">[.bib]</a>
 </p>
 
 <p>
 P. Rao, <b>G. C. Thomas</b>, L. Sentis, and A. Deshpande "Analyzing Achievable Stiffness Control Bounds of Robotic Hands With Compliantly Coupled Finger Joints," presented at <i>IEEE Conference on Robotics and Automation</i>, Singapore, 2017 <a href="http://www.icra2017.org/conference/awards#Manipulation">[Winner, Best ICRA 2017 Manipulation Paper]</a><a href="http://ieeexplore.ieee.org/document/7989393/">[Link]</a><a href="Preprints/RaoThomasSentisDeshpande2017ICRA.pdf">[pdf]</a><a href="bib/gray.bib.html#RaoThomasSentisDeshpande2017ICRA">[.bib]</a>
-<!-- <a href="Preprints/ThomasSentis2017ACC.pdf">[preprint]</a> -->
 </p>
 
 <p>
