--- a/bib/gray.bib.html
+++ b/bib/gray.bib.html
@@ -11,14 +11,27 @@ code {
 }
 </style>
 
-<div id="ThomasSentis201X"><code>
+<div id="ThomasSentis2019TAC"><code>
 @preamble{ " \newcommand{\noop}[1]{} " } % a do-nothing command that serves a purpose
 
-@unpublished{ThomasSentis2018TACpre,
+@unpublished{ThomasSentis2019TAC,
   title={Identifying H[infinity]-Models: An LMI Approach},
   author={Thomas, Gray Cortright and Sentis, Luis}, 
   year="\noop{3001} under review",
-  note="ArXiv:1802.07695. Submitted to IEEE Transactions on Automatic Control",
+  note="ArXiv:1802.07695. Accepted to IEEE Transactions on Automatic Control as a Technical Note",
+}
+
+</code></div>
+<div id="IsikThomasSentis2019DSMC"><code>
+@article{IsikThomasSentis2019DSMC,
+  title={A Fixed Structure Gain Selection Strategy for High Impedance Series Elastic Actuator Behavior},
+  author={Isik, Kenan and Thomas, Gray Cortright and Sentis, Luis},
+  journal={Journal of Dynamic Systems, Measurement, and Control},
+  volume={141},
+  number={2},
+  pages={021009},
+  year={2018},
+  publisher={American Society of Mechanical Engineers}
 }
 
 </code></div>
@@ -48,21 +61,39 @@ code {
 }
 
 </code></div>
-<div id="ThomasHeSentis2018preACC"><code>
-@unpublished{ThomasHeSentis2018ACC,
-  title={Safety Control Synthesis with Input Limits: a Hybrid Approach},
-  author={Thomas, Gray Cortright and He, Binghan and Sentis, Luis},
-  note={ArXiv:1802.10188 [math.OC]. Accepted for publication in 2018 American Control Conference (ACC)},
+<div id="HeThomasPaineSentis2019ACCpre"><code>
+@unpublished{HeThomasPaineSentis2019ACCpre,
+  title={Modeling and Loop Shaping of Single-Joint Amplification Exoskeleton with Contact Sensing and Series Elastic Actuation},
+  author={He, Binghan and Thomas, Gray Cortright and Paine, Nicholas Arden and Sentis, Luis},
+  note={ArXiv:1809.10560 [math.OC].},
   year="2018"
 }
 
 </code></div>
-<div id="SchlossmanThomasSentis2018ICRApre"><code>
-@unpublished{SchlossmanThomasSentis2018ICRApre,
+<div id="ThomasHeSentis2018ACC"><code>
+@inproceedings{ThomasHeSentis2018ACC,
+  title={Safety Control Synthesis with Input Limits: a Hybrid Approach},
+  author={Thomas, Gray Cortright and He, Binghan and Sentis, Luis},
+  booktitle={2018 Annual American Control Conference (ACC)},
+  year="2018",
+  pages={792--797}, 
+  doi={10.23919/ACC.2018.8431457}, 
+  ISSN={2378-5861}, 
+  month={June},
+  organization={IEEE}
+}
+
+</code></div>
+<div id="SchlossmanThomasCampbellSentis2018ROBIO"><code>
+@inproceedings{SchlossmanThomasCampbellSentis2018ROBIO,
   title={Toward Exploiting the Natural Dynamics of Series Elastic Robots by Actuator-Centered Sequential Linear Program},
-  author={Schlossman, Rachel and Thomas, Gray Cortright and Sentis, Luis},
+  author={Schlossman, Rachel and Thomas, Gray Cortright and Campbell, Orion and Sentis, Luis},
   note={ArXiv:1802.10190 [CS.RO]. Submitted to Intelligent Robots and Systems (IROS), 2018 IEEE International Conference on },
-  year="\noop{3001}under review"
+  year="2018",
+  booktitle={2018 IEEE International Conference on Robotics and Biomimetics (ROBIO)},
+  month={December},
+  pages={1405--1412}
+  organization={IEEE}
 }
 
 </code></div>
@@ -83,6 +114,7 @@ code {
   author={Rao, Prashant and Thomas, Gray Cortright and Sentis, Luis and Deshpande, Ashish},
   booktitle={Robotics and Automation (ICRA), 2017 IEEE Conference on },
   year={2017},
+  pages={3447--3452},
   organization={IEEE}
 }
 
