updated conference publication information

--- a/publications.html
+++ b/publications.html
@@ -80,13 +80,13 @@ Modeling and Loop Shaping of Single-Joint Amplification Exoskeleton with Contact
 </p>
 
 <p>
-R. Schlossman, <b>G. C. Thomas</b>, O. Campbell, and L. Sentis, "Toward Exploiting the Natural Dynamics of Series Elastic Robots by Actuator-Centered Sequential Linear Program," submitted to <i>The IEEE/RSJ International Conference on Intelligent Robots and Systems</i>,  Madrid, Spain, 2018 
+R. Schlossman, <b>G. C. Thomas</b>, O. Campbell, and L. Sentis, "Toward Exploiting the Natural Dynamics of Series Elastic Robots by Actuator-Centered Sequential Linear Program," presented at <i>The IEEE International Conference on Robotics and Biomimetics</i>,  Kuala Lumpur, Malaysia, 2018 
 <a href="https://arxiv.org/pdf/1802.10190.pdf">[ArXiv]</a> 
 <a href="bib/gray.bib.html#SchlossmanThomasCampbellSentis2018ROBIO">[.bib]</a>
 </p>
 
 <p>
-<b>G. C. Thomas</b>, B. He, and L. Sentis, "Safety Control Synthesis with Input Limits: a Hybrid Approach," accepted for publication in <i>The American Control Conference</i>, Milwaukee, WI, 2018 
+<b>G. C. Thomas</b>, B. He, and L. Sentis, "Safety Control Synthesis with Input Limits: a Hybrid Approach," presented at <i>The American Control Conference</i>, Milwaukee, WI, 2018 
 <a href="https://arxiv.org/pdf/1802.10188.pdf">[ArXiv]</a> 
 <a href="bib/gray.bib.html#ThomasHeSentis2018ACC">[.bib]</a>
 </p>
