Copied in an html snippet from the search results on CodeOcean to highlight the reproducability capsule for the hinfinity model identification.

--- a/index.html
+++ b/index.html
@@ -125,6 +125,47 @@ document.location = "index.m.html";
         In this figure, I've plotted the frequency response of the uncertain SEA-like mechanical system shown in part c. Due to some nonlinear friction, the device does not have a consistent bode plot as the amplitude changes, and this is modelled by the three separate black lines in the main figure a. Using a combination of the orthonormal basis functions shown in part d, the quadric inclusion program (QIP) learns the uncertain model represented by the red shaded region. Essentially, QIP fits a model by squeezing the uncertainty up against the worst outlier data---shifting both the frequency domain weighting on the uncertainty and the nominal model to accomplish this aim. I aim to build on this theory until it is practically applicable to the problem of identifiation and synthesis for high performance series elastic robots and exoskeletons, though it certainly won't be limited to that use case. 
       </p>
 
+      <div id="DIV_1">
+  <a href="https://codeocean.com/capsule/7861079/tree" id="A_2">
+  <div id="DIV_3">
+    <img src="https://codeocean.com/codeocean-public/algorithm/main-image/bb3ad3dc-70a3-4530-a65f-dad462f96420/1549360087" id="IMG_4" alt='' />
+  </div></a>
+  <div id="DIV_5">
+    <div id="DIV_6">
+      <!---->
+<a href="https://codeocean.com/explore/capsules/?query=field%3Aengineering" id="A_7">ENGINEERING</a>
+      <!---->
+<span id="SPAN_8">February 5, 2019</span>
+    </div>
+    <div id="DIV_9">
+      <a href="https://codeocean.com/capsule/7861079/tree" id="A_10">Code for: Quadric Inclusion Programs: an LMI Approach to H[infinity]-Model Identification</a> <span id="SPAN_11"><img id="IMG_12" alt='' /></span>
+    </div>
+    <div id="DIV_13">
+      Gray Cortright Thomas, Luis Sentis
+    </div>
+    <div id="DIV_14">
+      Demonstration of Quadric Inclusion Programming (QIP) for system identification using noisy frequency domain input output phasor measurements of an uncertain or under-modeled system.
+    </div>
+    <!---->
+
+  </div>
+  <div id="DIV_15">
+    <algorithm id="ALGORITHM-KEYWORDS_16">
+      <!---->
+ <a href="https://codeocean.com/explore/capsules/?query=tag%3Asystem-identificaton" id="A_17"> <span id="SPAN_18">system-identificaton</span></a>
+      <!---->
+ <a href="https://codeocean.com/explore/capsules/?query=tag%3Arobust-control" id="A_19"> <span id="SPAN_20">robust-control</span></a>
+      <!---->
+
+    </algorithm>
+    <div id="DIV_21">
+      ...
+    </div>
+  </div>
+</div>
+
+<!--         <script src="https://codeocean.com/widget.js?id=bb3ad3dc-70a3-4530-a65f-dad462f96420" async></script> -->
+
 <!--       <a name="USF"></a>
       <h3>
         Uncertain State Feedback 
