--- a/index.m.html
+++ b/index.m.html
@@ -146,6 +146,32 @@ document.location = "index.html";
           <!-- <a href="Preprints/ThomasSentis2017preTAC.pdf">[pre-print]</a> -->
         <!-- In our upcoming paper we provide a deep mathematical exploration of model learning at a single frequency. We prove the existence of an isomorphism between the three-tuple of model matrices and a single big matrix. We give geometric insight for this new parameterization, and prove that it is a convex space. We define a concept of model width and prove that it can be used to identify models in a far more complex convex optimization problem than before. We prove that in the limit as every possible behavior of the true model is explored, the identified model matches the true model. We additionally motivate a noise-robustness modification which protects the identification strategy from sensor noise. -->
       </p>
+            <div id="DIV_1" width="100%">
+  <a href="https://codeocean.com/capsule/7861079/tree" id="A_2" >
+  <div id="DIV_3">
+    <img src="https://codeocean.com/codeocean-public/algorithm/main-image/bb3ad3dc-70a3-4530-a65f-dad462f96420/1549360087" id="IMG_4" alt='' />
+  </div></a>
+  <div id="DIV_5">
+    <div id="DIV_6">
+      <!---->
+<a href="https://codeocean.com/explore/capsules/?query=field%3Aengineering" id="A_7">ENGINEERING</a>
+      <!---->
+<span id="SPAN_8">February 5, 2019</span>
+    </div>
+    <div id="DIV_9">
+      <a href="https://codeocean.com/capsule/7861079/tree" id="A_10">Code for: Quadric Inclusion Programs: an LMI Approach to H[infinity]-Model Identification</a> <span id="SPAN_11"><img id="IMG_12" alt='' /></span>
+    </div>
+    <div id="DIV_13">
+      Gray Cortright Thomas, Luis Sentis
+    </div>
+    <div id="DIV_14">
+      Demonstration of Quadric Inclusion Programming (QIP) for system identification using noisy frequency domain input output phasor measurements of an uncertain or under-modeled system.
+    </div>
+    <!---->
+
+  </div>
+  
+</div>
       
       <a name="Rao"></a>
       <h3>
