--- a/bib/gray.bib.html
+++ b/bib/gray.bib.html
@@ -11,14 +11,30 @@ code {
 }
 </style>
 
-<div id="ThomasSentis201X"><code>
+<div id="ThomasSentis2019TAC"><code>
 @preamble{ " \newcommand{\noop}[1]{} " } % a do-nothing command that serves a purpose
 
-@unpublished{ThomasSentis2018TACpre,
-  title={Identifying H[infinity]-Models: An LMI Approach},
+@article{ThomasSentis2019TAC,
+  title={Quadric Inclusion Programs: an LMI Approach to H[infinity]-Model Identification},
   author={Thomas, Gray Cortright and Sentis, Luis}, 
-  year="\noop{3001} under review",
-  note="ArXiv:1802.07695. Submitted to IEEE Transactions on Automatic Control",
+  year={2019},
+  publisher={IEEE},
+  doi={10.1109/TAC.2019.2897886},
+  url={http://dx.doi.org/10.1109/TAC.2019.2897886},
+  journal={IEEE Transactions on Automatic Control (Early Access)}
+}
+
+</code></div>
+<div id="IsikThomasSentis2019JDSMC"><code>
+@article{IsikThomasSentis2019JDSMC,
+  title={A Fixed Structure Gain Selection Strategy for High Impedance Series Elastic Actuator Behavior},
+  author={Isik, Kenan and Thomas, Gray Cortright and Sentis, Luis},
+  journal={Journal of Dynamic Systems, Measurement, and Control},
+  volume={141},
+  number={2},
+  pages={021009},
+  year={2019},
+  publisher={American Society of Mechanical Engineers}
 }
 
 </code></div>
@@ -48,21 +64,52 @@ code {
 }
 
 </code></div>
-<div id="ThomasHeSentis2018preACC"><code>
-@unpublished{ThomasHeSentis2018ACC,
-  title={Safety Control Synthesis with Input Limits: a Hybrid Approach},
-  author={Thomas, Gray Cortright and He, Binghan and Sentis, Luis},
-  note={ArXiv:1802.10188 [math.OC]. Accepted for publication in 2018 American Control Conference (ACC)},
-  year="2018"
+<div id="ThomasCoholichSentis2019pre"><code>
+@unpublished{ThomasCoholichSentis2019pre,
+  title={Compliance Shaping for Control of Strength Amplification Exoskeletons with Elastic Cuffs},
+  author={Thomas, Gray Cortright and Coholich, Jeremiah M and Sentis, Luis},
+  note={arXiv preprint arXiv:1903.09673},
+  year={2019}
 }
 
 </code></div>
-<div id="SchlossmanThomasSentis2018ICRApre"><code>
-@unpublished{SchlossmanThomasSentis2018ICRApre,
-  title={Toward Exploiting the Natural Dynamics of Series Elastic Robots by Actuator-Centered Sequential Linear Program},
-  author={Schlossman, Rachel and Thomas, Gray Cortright and Sentis, Luis},
-  note={ArXiv:1802.10190 [CS.RO]. Submitted to Intelligent Robots and Systems (IROS), 2018 IEEE International Conference on },
-  year="\noop{3001}under review"
+<div id="HeHuangThomasSentis2019pre"><code>
+@unpublished{HeHuangThomasSentis2019pre,
+  title={Complex Stiffness Model of Physical Human-Robot Interaction: Implications for Control of Performance Augmentation Exoskeletons},
+  author={He, Binghan and Huang, Huang and Thomas, Gray C and Sentis, Luis},
+  note={arXiv preprint arXiv:1903.00704},
+  year={2019}
+}
+
+</code></div>
+<div id="HeThomasPaineSentis2019ACC"><code>
+@unpublished{HeThomasPaineSentis2019ACC,
+  title={Modeling and loop shaping of single-joint amplification exoskeleton with contact sensing and series elastic actuation},
+  author={He, Binghan and Thomas, Gray C and Paine, Nicholas and Sentis, Luis},
+  note={arXiv preprint arXiv:1809.10560, Accepted at 2019 Annual American Control Conference (ACC)},
+  year={2019}
+}
+
+</code></div>
+<div id="ThomasHeSentis2018ACC"><code>
+@inproceedings{ThomasHeSentis2018ACC,
+  title={Safety Control Synthesis with Input Limits: a Hybrid Approach},
+  author={Thomas, Gray C and He, Binghan and Sentis, Luis},
+  booktitle={2018 Annual American Control Conference (ACC)},
+  pages={792--797},
+  year={2018},
+  organization={IEEE}
+}
+
+</code></div>
+<div id="SchlossmanThomasSentis2018ROBIO"><code>
+@inproceedings{SchlossmanThomasSentis2018ROBIO,
+  title={Exploiting the natural dynamics of series elastic robots by actuator-centered sequential linear programming},
+  author={Schlossman, Rachel and Thomas, Gray C and Campbell, Orion and Sentis, Luis},
+  booktitle={2018 IEEE International Conference on Robotics and Biomimetics (ROBIO)},
+  pages={1405--1412},
+  year={2018},
+  organization={IEEE}
 }
 
 </code></div>
